# g2opy

./: CMakeLists.txt  README.md  setup.py
g2o/core/: optimization_algorithm.cpp  optimization_algorithm_levenberg.cpp  optimization_algorithm_with_hessian.cpp
g2o/stuff/: property.cpp  property.h
java/: CMakeLists.txt  com_mapbox_g2o_SparseOptimizer.h  g2o.cpp
